--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=RPGhn3EE-3wAX8ro8AH&oh=e32a4eed1a5478167c8c76f4fb7ecf06&oe=5EDBEAAA" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=SX9fm7B1bhsAX86z9hJ&oh=72cb67ed64b6bb38a3465d762980a68c&oe=5EDBEAAA" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -106,9 +106,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="salat-iz-pomidorovx-ogurtsov" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/96012525_569453713682728_5574144052699264672_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=2aeL6w1RaU0AX9MEWys&oh=c83ecb99ff9f994bc6c7344816dff814&oe=5EDCDDE9" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="САЛАТ ИЗ ПОМИДОРОВ, ОГУРЦОВ">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="o-chem-govoryat-pishchevye-zavisimosti" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95555822_873387673180603_168422133034049339_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=NDKmllF1VT4AX-m2z_S&oh=22d69cd7200f0172a80c0a88b26b2bbd&oe=5EDA84B4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="О ЧЕМ ГОВОРЯТ ПИЩЕВЫЕ ЗАВИСИМОСТИ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95555822_873387673180603_168422133034049339_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=HJFefdOnZVEAX_cIYdm&oh=a9d39fa55d79b0a727ff85682ab59364&oe=5EDA84B4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="О ЧЕМ ГОВОРЯТ ПИЩЕВЫЕ ЗАВИСИМОСТИ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="drevesnyy-istochnik-glyukozyxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94830600_253519515700605_2670319476516271459_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=Rvke7ffTgPkAX8I2KTT&oh=05f3d58d53d486805971d01badc2fc4d&oe=5EDA8516" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДРЕВЕСНЫЙ ИСТОЧНИК ГЛЮКОЗЫ 😎🍯">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94830600_253519515700605_2670319476516271459_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=-Z-MnybBiiQAX991COa&oh=d447854583bfbda22a0508dc7661e8f7&oe=5EDA8516" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДРЕВЕСНЫЙ ИСТОЧНИК ГЛЮКОЗЫ 😎🍯">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="etot-variant-kartofel-nogo-omleta" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94620966_275530396780199_7448910712073894917_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=g8YZBM43gI0AX9LboPB&oh=6c2e280b751dc65cc67f41bdde917423&oe=5ED987EB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Этот вариант картофельного омлета">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94620966_275530396780199_7448910712073894917_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=g8YZBM43gI0AX9LboPB&oh=72180718d13ea3a78a2b49026000d4fc&oe=5EDD7C6B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Этот вариант картофельного омлета">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="chto-ya-ela-za-den-xxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94196291_222078719237008_665964129471407108_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=AGdUdJbH3OQAX-9-bzF&oh=436bef41ba2009e5c222492ab1517bb5&oe=5ED8CF7B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО Я ЕЛА ЗА ДЕНЬ 🤨😀">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94196291_222078719237008_665964129471407108_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=8Xgym_R9DMUAX8_33-g&oh=f01f4e929c161ccc7004ae19f3aacad3&oe=5EDCC3FB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО Я ЕЛА ЗА ДЕНЬ 🤨😀">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="shalfey-dlya-vyvedeniya-tm-iz-kishechnikaxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/93945481_538231843553142_713031681186641630_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=g_kM9Qnu5XIAX-Rkotz&oh=1505c89f0d51d6d395938d0f6eb1d956&oe=5ED98B7F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ШАЛФЕЙ ДЛЯ ВЫВЕДЕНИЯ ТМ ИЗ КИШЕЧНИКА 🌟🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/93945481_538231843553142_713031681186641630_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=O1Vy4pPwjV8AX_32gHd&oh=2f88b369ee8c2d58f06ce362c7bde82b&oe=5EDD7FFF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ШАЛФЕЙ ДЛЯ ВЫВЕДЕНИЯ ТМ ИЗ КИШЕЧНИКА 🌟🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -208,7 +218,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="pol-za-kremniya-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94288863_517569202260758_9151571851577457594_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=o9E8XirGh9EAX-v-WyX&oh=3f45f16d6e4e954bbb936a59d6ca5efb&oe=5ED8BEE3" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПОЛЬЗА КРЕМНИЯ 🦷🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94288863_517569202260758_9151571851577457594_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=o9E8XirGh9EAX-v-WyX&oh=fa668dd42e7e4cfbfc4130fa5fe1093c&oe=5EDCB363" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПОЛЬЗА КРЕМНИЯ 🦷🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="tsvetnaya-kapusta" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/93051263_256693782133255_4218797136526045842_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=lE1XfdjEJLcAX9j_OEA&oh=c0439ef13ccb306b44d266b60568d73c&oe=5ED8923A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЦВЕТНАЯ КАПУСТА.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/93051263_256693782133255_4218797136526045842_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=lE1XfdjEJLcAX9j_OEA&oh=581cea60b02269dd4c01e3f001ca5f92&oe=5EDC86BA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЦВЕТНАЯ КАПУСТА.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -238,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="5-shagov-k-zdorov-yu-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/93222267_684542318963775_574568151722070626_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=j455YJQ-BTEAX_Sy3A-&oh=f8dd7a03df342a186d30414396ace295&oe=5ED90B77" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="5 ШАГОВ К ЗДОРОВЬЮ 😉">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/93222267_684542318963775_574568151722070626_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=j455YJQ-BTEAX_Sy3A-&oh=5bf186b514ee00c8ffe71275b7a73047&oe=5EDCFFF7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="5 ШАГОВ К ЗДОРОВЬЮ 😉">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx5-let-rastitel-nogo-pitaniya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/92811103_661153611285125_4077386452878893486_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=a_0WeOAtYw4AX_quECG&oh=c6f03aaf6addb6bed86789807e2ded16&oe=5EDB8375" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🌱5 ЛЕТ РАСТИТЕЛЬНОГО ПИТАНИЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/92811103_661153611285125_4077386452878893486_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=4VX45zd-lRQAX_oz2PA&oh=1f6dca4c797c90e5f2e281a7c0ef9970&oe=5EDB8375" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🌱5 ЛЕТ РАСТИТЕЛЬНОГО ПИТАНИЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,17 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="v-poslednee-vremya-stalo" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91596736_142381333985760_6261366196227650123_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=Mu5owt0scP4AX9P1Gjn&oh=f7785a414ecb201796ee5e4c9ca86c7b&oe=5ED94BE4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="В последнее время стало">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="v-zavershenii-serii-postov" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/92028683_657372118431316_6533176371729812244_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=O12EDJAE7MQAX81FKbM&oh=ef6c072edadb2d834ad866aa10d47449&oe=5ED97F15" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="В завершении серии постов">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91596736_142381333985760_6261366196227650123_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=zDeHX5qT51oAX8dnnnV&oh=dfca83a6138b15f3334b735f62859e6b&oe=5EDD4064" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="В последнее время стало">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
