--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="anishapo безжиров иммунитет смузи детокс спасениепечени369 тм яштокролик чаи про зубы жиры">
-    <meta name="keywords" content="anishapo безжиров иммунитет смузи детокс спасениепечени369 тм яштокролик чаи про зубы жиры" />
+    <meta name="description" content="anishapo спасениепечени369 безжиров иммунитет тм яштокролик чаи про зубы жиры стреп">
+    <meta name="keywords" content="anishapo спасениепечени369 безжиров иммунитет тм яштокролик чаи про зубы жиры стреп" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="anishapo безжиров иммунитет смузи детокс спасениепечени369 тм яштокролик чаи про зубы жиры" />
+    <meta property="og:description" content="anishapo спасениепечени369 безжиров иммунитет тм яштокролик чаи про зубы жиры стреп" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=RPGhn3EE-3wAX8ro8AH&oh=e32a4eed1a5478167c8c76f4fb7ecf06&oe=5EDBEAAA" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=SX9fm7B1bhsAX86z9hJ&oh=72cb67ed64b6bb38a3465d762980a68c&oe=5EDBEAAA" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -84,6 +84,14 @@
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
+								<div class="stories__slide" title="anishapo спасениепечени369">
+									<a href="./tags/./anishapo-spaseniepecheni369.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-spaseniepecheni369.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo спасениепечени369</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
 								<div class="stories__slide" title="anishapo иммунитет">
 									<a href="./tags/./anishapo-immunitet.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-immunitet.png);"></div>
@@ -96,14 +104,6 @@
 									<a href="./tags/./anishapo-bezzhirov.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-bezzhirov.png);"></div>
 										<div class="stories__slide-txt" style="">anishapo безжиров</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo спасениепечени369">
-									<a href="./tags/./anishapo-spaseniepecheni369.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-spaseniepecheni369.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo спасениепечени369</div>
 									</a>
 								</div>
 							</div>
@@ -359,9 +359,9 @@
 								<a href="./posts/./etot-variant-kartofel-nogo-omleta.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1929</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1933</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94620966_275530396780199_7448910712073894917_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=g8YZBM43gI0AX9LboPB&oh=6c2e280b751dc65cc67f41bdde917423&oe=5ED987EB" alt="Этот вариант картофельного омлета">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94620966_275530396780199_7448910712073894917_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=g8YZBM43gI0AX9LboPB&oh=72180718d13ea3a78a2b49026000d4fc&oe=5EDD7C6B" alt="Этот вариант картофельного омлета">
 									</div>
 									<div class="article-more__item-name" style="
 ">Этот вариант картофельного омлета</div>
@@ -381,27 +381,17 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1124</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94196291_222078719237008_665964129471407108_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=AGdUdJbH3OQAX-9-bzF&oh=436bef41ba2009e5c222492ab1517bb5&oe=5ED8CF7B" alt="ЧТО Я ЕЛА ЗА ДЕНЬ 🤨😀">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94196291_222078719237008_665964129471407108_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=8Xgym_R9DMUAX8_33-g&oh=f01f4e929c161ccc7004ae19f3aacad3&oe=5EDCC3FB" alt="ЧТО Я ЕЛА ЗА ДЕНЬ 🤨😀">
 									</div>
 									<div class="article-more__item-name" style="
 ">ЧТО Я ЕЛА ЗА ДЕНЬ 🤨😀</div>
 								</a>
-								<a href="./posts/./tsvetnaya-kapusta.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1063</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/93051263_256693782133255_4218797136526045842_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=lE1XfdjEJLcAX9j_OEA&oh=c0439ef13ccb306b44d266b60568d73c&oe=5ED8923A" alt="ЦВЕТНАЯ КАПУСТА.">
-									</div>
-									<div class="article-more__item-name" style="
-">ЦВЕТНАЯ КАПУСТА.</div>
-								</a>
 								<a href="./posts/./pol-za-kremniya-xxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>949</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>950</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94288863_517569202260758_9151571851577457594_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=o9E8XirGh9EAX-v-WyX&oh=3f45f16d6e4e954bbb936a59d6ca5efb&oe=5ED8BEE3" alt="ПОЛЬЗА КРЕМНИЯ 🦷🌱">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94288863_517569202260758_9151571851577457594_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=o9E8XirGh9EAX-v-WyX&oh=fa668dd42e7e4cfbfc4130fa5fe1093c&oe=5EDCB363" alt="ПОЛЬЗА КРЕМНИЯ 🦷🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">ПОЛЬЗА КРЕМНИЯ 🦷🌱</div>
@@ -409,9 +399,9 @@
 								<a href="./posts/./o-chem-govoryat-pishchevye-zavisimosti.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>828</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>937</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95555822_873387673180603_168422133034049339_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=NDKmllF1VT4AX-m2z_S&oh=22d69cd7200f0172a80c0a88b26b2bbd&oe=5EDA84B4" alt="О ЧЕМ ГОВОРЯТ ПИЩЕВЫЕ ЗАВИСИМОСТИ">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95555822_873387673180603_168422133034049339_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=HJFefdOnZVEAX_cIYdm&oh=a9d39fa55d79b0a727ff85682ab59364&oe=5EDA84B4" alt="О ЧЕМ ГОВОРЯТ ПИЩЕВЫЕ ЗАВИСИМОСТИ">
 									</div>
 									<div class="article-more__item-name" style="
 ">О ЧЕМ ГОВОРЯТ ПИЩЕВЫЕ ЗАВИСИМОСТИ</div>
@@ -419,7 +409,7 @@
 								<a href="./posts/./istselyayushchie-svoystva-sparzhixxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>797</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>799</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94951517_597248230878070_2799219618207129721_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=RozutYI2Yx0AX_1bKa3&oh=84680db9c10a79cea38f7b42b65d26c5&oe=5EDBEEAB" alt="ИСЦЕЛЯЮЩИЕ СВОЙСТВА СПАРЖИ 🌱">
 									</div>
@@ -429,12 +419,22 @@
 								<a href="./posts/./shalfey-dlya-vyvedeniya-tm-iz-kishechnikaxxxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>788</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>789</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/93945481_538231843553142_713031681186641630_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=g_kM9Qnu5XIAX-Rkotz&oh=1505c89f0d51d6d395938d0f6eb1d956&oe=5ED98B7F" alt="ШАЛФЕЙ ДЛЯ ВЫВЕДЕНИЯ ТМ ИЗ КИШЕЧНИКА 🌟🌱">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/93945481_538231843553142_713031681186641630_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=O1Vy4pPwjV8AX_32gHd&oh=2f88b369ee8c2d58f06ce362c7bde82b&oe=5EDD7FFF" alt="ШАЛФЕЙ ДЛЯ ВЫВЕДЕНИЯ ТМ ИЗ КИШЕЧНИКА 🌟🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">ШАЛФЕЙ ДЛЯ ВЫВЕДЕНИЯ ТМ ИЗ КИШЕЧНИКА 🌟🌱</div>
+								</a>
+								<a href="./posts/./primer-menyu-na-3x6x9.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>774</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95267087_2617933115199726_7745495855845251510_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=d7LKgV9-McEAX-nl3x7&oh=ff504ba15288d8d3d38e87bdb1191c89&oe=5ED9FBD5" alt="ПРИМЕР МЕНЮ НА 3:6:9">
+									</div>
+									<div class="article-more__item-name" style="
+">ПРИМЕР МЕНЮ НА 3:6:9</div>
 								</a>
 							</div>
 						</div>
