--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=SX9fm7B1bhsAX86z9hJ&oh=72cb67ed64b6bb38a3465d762980a68c&oe=5EDBEAAA" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=MEMGwoVTTokAX8wCK_E&oh=a23cdf567a68339d72050b4593ff0766&oe=5F0377AA" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -83,77 +83,77 @@
 				<div class="container">
 					<h2 class="article-more__title">ПОПУЛЯРНЫЕ</h2>
 					<div class="article-more__list">
-							<a href="./posts/./etot-variant-kartofel-nogo-omleta.html" class="article-more__item">
+							<a href="./posts/./zhizn--v-stile-detoks.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1933</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1443</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94620966_275530396780199_7448910712073894917_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=g8YZBM43gI0AX9LboPB&oh=72180718d13ea3a78a2b49026000d4fc&oe=5EDD7C6B" alt="Этот вариант картофельного омлета">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101418878_2717064335205064_1737323169181004803_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=7ew7fdJvQOIAX_Bodz3&oh=3c85d1ece39822c4d188e96fce7cd6ad&oe=5F02FA6E" alt="ЖИЗНЬ В СТИЛЕ ДЕТОКС">
 							</div>
-							<div class="article-more__item-name">Этот вариант картофельного омлета</div>
+							<div class="article-more__item-name">ЖИЗНЬ В СТИЛЕ ДЕТОКС</div>
 						</a>
-							<a href="./posts/./mm-protokol-pri-prostude-i-grippe.html" class="article-more__item">
+							<a href="./posts/./interval-noe-golodanie.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1244</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1289</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94908449_233556167753615_2423687939069125428_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=km8rx_ATJsUAX-rXfdi&oh=5de58dded983da93a2b3858de556e832&oe=5EDAD3BA" alt="ММ ПРОТОКОЛ ПРИ ПРОСТУДЕ И ГРИППЕ">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101172768_116859330040796_4014620460128629771_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=qvGIOKE82-4AX93xczS&oh=9f0031834075c2426d1449213bf000f6&oe=5F01D84E" alt="ИНТЕРВАЛЬНОЕ ГОЛОДАНИЕ.">
 							</div>
-							<div class="article-more__item-name">ММ ПРОТОКОЛ ПРИ ПРОСТУДЕ И ГРИППЕ</div>
+							<div class="article-more__item-name">ИНТЕРВАЛЬНОЕ ГОЛОДАНИЕ.</div>
 						</a>
-							<a href="./posts/./chto-ya-ela-za-den-xxxxx.html" class="article-more__item">
+							<a href="./posts/./x-zhir-x-sakhar-i-drugie-variatsii.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1124</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1262</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94196291_222078719237008_665964129471407108_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=8Xgym_R9DMUAX8_33-g&oh=f01f4e929c161ccc7004ae19f3aacad3&oe=5EDCC3FB" alt="ЧТО Я ЕЛА ЗА ДЕНЬ 🤨😀">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/100089532_2790935021017406_2998935086677412144_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=VOsASzQss7kAX_i5TGi&oh=7864d08d59e7666490e44bdca6d52950&oe=5EFFF5A5" alt="❌ ЖИР + САХАР И ДРУГИЕ ВАРИАЦИИ">
 							</div>
-							<div class="article-more__item-name">ЧТО Я ЕЛА ЗА ДЕНЬ 🤨😀</div>
+							<div class="article-more__item-name">❌ ЖИР + САХАР И ДРУГИЕ ВАРИАЦИИ</div>
 						</a>
-							<a href="./posts/./pol-za-kremniya-xxxx.html" class="article-more__item">
+							<a href="./posts/./ya-neodnokratno-stalkivayus--s-temx-chto-mnogie.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>950</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1216</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94288863_517569202260758_9151571851577457594_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=o9E8XirGh9EAX-v-WyX&oh=fa668dd42e7e4cfbfc4130fa5fe1093c&oe=5EDCB363" alt="ПОЛЬЗА КРЕМНИЯ 🦷🌱">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/98458367_288188905909491_779857171730809679_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=IyfYczqliToAX9CBN9u&oh=3c01ea805179ec191995a05c82499166&oe=5F0254D5" alt="Я неоднократно сталкиваюсь с тем, что многие">
 							</div>
-							<div class="article-more__item-name">ПОЛЬЗА КРЕМНИЯ 🦷🌱</div>
+							<div class="article-more__item-name">Я неоднократно сталкиваюсь с тем, что многие</div>
 						</a>
-							<a href="./posts/./o-chem-govoryat-pishchevye-zavisimosti.html" class="article-more__item">
+							<a href="./posts/./xx-tsena-interval-nogo-golodaniya.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>937</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1056</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95555822_873387673180603_168422133034049339_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=HJFefdOnZVEAX_cIYdm&oh=a9d39fa55d79b0a727ff85682ab59364&oe=5EDA84B4" alt="О ЧЕМ ГОВОРЯТ ПИЩЕВЫЕ ЗАВИСИМОСТИ">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101098622_101079681620253_7893285772348737471_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=Drc_ImQ_1A0AX_RMbqP&oh=5100743ab6707e49016f69e54fc1559e&oe=5F014F90" alt="🔥 ЦЕНА ИНТЕРВАЛЬНОГО ГОЛОДАНИЯ">
 							</div>
-							<div class="article-more__item-name">О ЧЕМ ГОВОРЯТ ПИЩЕВЫЕ ЗАВИСИМОСТИ</div>
+							<div class="article-more__item-name">🔥 ЦЕНА ИНТЕРВАЛЬНОГО ГОЛОДАНИЯ</div>
 						</a>
-							<a href="./posts/./istselyayushchie-svoystva-sparzhixxx.html" class="article-more__item">
+							<a href="./posts/./toksichnye-vrediteli-xx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>799</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>945</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94951517_597248230878070_2799219618207129721_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=RozutYI2Yx0AX_1bKa3&oh=84680db9c10a79cea38f7b42b65d26c5&oe=5EDBEEAB" alt="ИСЦЕЛЯЮЩИЕ СВОЙСТВА СПАРЖИ 🌱">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101421325_245625310000068_291160102237677734_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=-2n_LXDkne8AX_znFPh&oh=96ed41e82ae71a985cd0615fb17a5976&oe=5F0288DF" alt="ТОКСИЧНЫЕ ВРЕДИТЕЛИ 🦠">
 							</div>
-							<div class="article-more__item-name">ИСЦЕЛЯЮЩИЕ СВОЙСТВА СПАРЖИ 🌱</div>
+							<div class="article-more__item-name">ТОКСИЧНЫЕ ВРЕДИТЕЛИ 🦠</div>
 						</a>
-							<a href="./posts/./shalfey-dlya-vyvedeniya-tm-iz-kishechnikaxxxxx.html" class="article-more__item">
+							<a href="./posts/./god-bez-zhirov.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>789</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>859</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/93945481_538231843553142_713031681186641630_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=O1Vy4pPwjV8AX_32gHd&oh=2f88b369ee8c2d58f06ce362c7bde82b&oe=5EDD7FFF" alt="ШАЛФЕЙ ДЛЯ ВЫВЕДЕНИЯ ТМ ИЗ КИШЕЧНИКА 🌟🌱">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101685128_756670644870301_8830249613421662623_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=M1etZbhD-4EAX-a8fBN&oh=7ea5398f263c8fbda7e67a84676bc05b&oe=5F02A6FF" alt="ГОД БЕЗ ЖИРОВ.">
 							</div>
-							<div class="article-more__item-name">ШАЛФЕЙ ДЛЯ ВЫВЕДЕНИЯ ТМ ИЗ КИШЕЧНИКА 🌟🌱</div>
+							<div class="article-more__item-name">ГОД БЕЗ ЖИРОВ.</div>
 						</a>
-							<a href="./posts/./primer-menyu-na-3x6x9.html" class="article-more__item">
+							<a href="./posts/./masla.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>774</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>855</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95267087_2617933115199726_7745495855845251510_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=d7LKgV9-McEAX-nl3x7&oh=ff504ba15288d8d3d38e87bdb1191c89&oe=5ED9FBD5" alt="ПРИМЕР МЕНЮ НА 3:6:9">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/99050802_1569651349875494_1068787266833651333_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=xBx9TgIpek4AX9yvYq_&oh=5ec684d848e47f7716d7c6d4bab522a9&oe=5F02B040" alt="МАСЛА…">
 							</div>
-							<div class="article-more__item-name">ПРИМЕР МЕНЮ НА 3:6:9</div>
+							<div class="article-more__item-name">МАСЛА…</div>
 						</a>
 						</div>
 				</div>
