--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=MEMGwoVTTokAX8wCK_E&oh=a23cdf567a68339d72050b4593ff0766&oe=5F0377AA" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=XFm952sxMAwAX-ldrO_&oh=2b6138de3c5eedd8934184dabfd216f1&oe=5F0377AA" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -106,9 +106,9 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
-							<input id="v-kakikh-knigakh-mozhno" type="checkbox" />
+							<input id="o-chem-govorit-neperenosimost--fruktov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e15/101685123_2279814208980180_8710301517043126533_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=ckWqyfBHK5IAX_8_4rN&oh=24712961029341668288d772d700c34d&oe=5EDA9CE5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="В каких книгах можно">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101398119_318429069147662_1373205108327136407_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=TVB58iOvklUAX_JUUSo&oh=55530a10d2d932ee724b4aac0af91c8f&oe=5F0203E2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="О ЧЕМ ГОВОРИТ НЕПЕРЕНОСИМОСТЬ ФРУКТОВ?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -118,7 +118,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="god-bez-zhirov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101685128_756670644870301_8830249613421662623_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=M1etZbhD-4EAX-a8fBN&oh=7ea5398f263c8fbda7e67a84676bc05b&oe=5F02A6FF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГОД БЕЗ ЖИРОВ.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101685128_756670644870301_8830249613421662623_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=DglTSaYg0hsAX-z_2cm&oh=91a98a77aca6b0958b22213c596569a2&oe=5F02A6FF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГОД БЕЗ ЖИРОВ.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -128,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="khochu-raskryt--vam-svoy-sekretxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101432207_846287522564790_1033379956016755776_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=ODEQ6oG1JOIAX_Nburn&oh=5f56dd61714ea81aef8ed6f3f0d53264&oe=5F0210F0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ХОЧУ РАСКРЫТЬ ВАМ СВОЙ СЕКРЕТ 🤫😎">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101432207_846287522564790_1033379956016755776_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=YnL59FsCb5wAX9fB3rq&oh=57c5c0dc2335627dee891ebc9a8c392d&oe=5F0210F0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ХОЧУ РАСКРЫТЬ ВАМ СВОЙ СЕКРЕТ 🤫😎">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -158,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhizn--v-stile-detoks" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101418878_2717064335205064_1737323169181004803_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=7ew7fdJvQOIAX_Bodz3&oh=3c85d1ece39822c4d188e96fce7cd6ad&oe=5F02FA6E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИЗНЬ В СТИЛЕ ДЕТОКС">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101418878_2717064335205064_1737323169181004803_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=JfsFDkPNNXkAX9t-4fp&oh=becf24a088945fbc86ecfe6002aea519&oe=5F02FA6E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИЗНЬ В СТИЛЕ ДЕТОКС">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +168,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-ananasxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101526673_186631159250094_3367879356632716893_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=chVqNnqu8DIAX-trMUX&oh=10f943ad8b3c94f6feb25f1d6c56d225&oe=5F004C7A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🍍 АНАНАС 🍍">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101526673_186631159250094_3367879356632716893_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=chVqNnqu8DIAX-trMUX&oh=ec533c2afeb86cd8cdf78407b7f99606&oe=5F0440FA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🍍 АНАНАС 🍍">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="x-zhir-x-sakhar-i-drugie-variatsii" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/100089532_2790935021017406_2998935086677412144_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=VOsASzQss7kAX_i5TGi&oh=7864d08d59e7666490e44bdca6d52950&oe=5EFFF5A5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="❌ ЖИР + САХАР И ДРУГИЕ ВАРИАЦИИ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/100089532_2790935021017406_2998935086677412144_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=MU92I3_C85EAX86mHha&oh=ab7d81d31ee3a382affa2547130dcfb9&oe=5F03EA25" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="❌ ЖИР + САХАР И ДРУГИЕ ВАРИАЦИИ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
