--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="медикалмедиум детокс меню энтониуильям соксельдерея марафон anishapo личное программа healingfood надпочечники">
-    <meta name="keywords" content="медикалмедиум детокс меню энтониуильям соксельдерея марафон anishapo личное программа healingfood надпочечники" />
+    <meta name="description" content="anishapo личное медикалмедиум healingfood надпочечники">
+    <meta name="keywords" content="anishapo личное медикалмедиум healingfood надпочечники" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="медикалмедиум детокс меню энтониуильям соксельдерея марафон anishapo личное программа healingfood надпочечники" />
+    <meta property="og:description" content="anishapo личное медикалмедиум healingfood надпочечники" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=MEMGwoVTTokAX8wCK_E&oh=a23cdf567a68339d72050b4593ff0766&oe=5F0377AA" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=XFm952sxMAwAX-ldrO_&oh=2b6138de3c5eedd8934184dabfd216f1&oe=5F0377AA" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -84,14 +84,6 @@
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<div class="stories__slide" title="медикалмедиум">
-									<a href="./tags/./medikalmedium.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/medikalmedium.png);"></div>
-										<div class="stories__slide-txt" style="">медикалмедиум</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
 								<div class="stories__slide" title="anishapo личное">
 									<a href="./tags/./anishapo-lichnoe.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-lichnoe.png);"></div>
@@ -108,50 +100,10 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="детокс">
-									<a href="./tags/./detoks.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/detoks.png);"></div>
-										<div class="stories__slide-txt" style="">детокс</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="детокс меню">
-									<a href="./tags/./detoks-menyu.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/detoks-menyu.png);"></div>
-										<div class="stories__slide-txt" style="">детокс меню</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="энтониуильям">
-									<a href="./tags/./entoniuil-yam.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/entoniuil-yam.png);"></div>
-										<div class="stories__slide-txt" style="">энтониуильям</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="соксельдерея">
-									<a href="./tags/./soksel-dereya.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/soksel-dereya.png);"></div>
-										<div class="stories__slide-txt" style="">соксельдерея</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="детокс марафон">
-									<a href="./tags/./detoks-marafon.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/detoks-marafon.png);"></div>
-										<div class="stories__slide-txt" style="">детокс марафон</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="детокс программа">
-									<a href="./tags/./detoks-programma.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/detoks-programma.png);"></div>
-										<div class="stories__slide-txt" style="">детокс программа</div>
+								<div class="stories__slide" title="медикалмедиум">
+									<a href="./tags/./medikalmedium.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/medikalmedium.png);"></div>
+										<div class="stories__slide-txt" style="">медикалмедиум</div>
 									</a>
 								</div>
 							</div>
@@ -199,9 +151,9 @@
 								<a href="./posts/./zhizn--v-stile-detoks.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1443</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1446</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101418878_2717064335205064_1737323169181004803_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=7ew7fdJvQOIAX_Bodz3&oh=3c85d1ece39822c4d188e96fce7cd6ad&oe=5F02FA6E" alt="ЖИЗНЬ В СТИЛЕ ДЕТОКС">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101418878_2717064335205064_1737323169181004803_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=JfsFDkPNNXkAX9t-4fp&oh=becf24a088945fbc86ecfe6002aea519&oe=5F02FA6E" alt="ЖИЗНЬ В СТИЛЕ ДЕТОКС">
 									</div>
 									<div class="article-more__item-name" style="
 ">ЖИЗНЬ В СТИЛЕ ДЕТОКС</div>
@@ -209,7 +161,7 @@
 								<a href="./posts/./interval-noe-golodanie.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1289</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1291</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101172768_116859330040796_4014620460128629771_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=qvGIOKE82-4AX93xczS&oh=9f0031834075c2426d1449213bf000f6&oe=5F01D84E" alt="ИНТЕРВАЛЬНОЕ ГОЛОДАНИЕ.">
 									</div>
@@ -219,9 +171,9 @@
 								<a href="./posts/./x-zhir-x-sakhar-i-drugie-variatsii.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1262</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1264</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/100089532_2790935021017406_2998935086677412144_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=VOsASzQss7kAX_i5TGi&oh=7864d08d59e7666490e44bdca6d52950&oe=5EFFF5A5" alt="❌ ЖИР + САХАР И ДРУГИЕ ВАРИАЦИИ">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/100089532_2790935021017406_2998935086677412144_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=MU92I3_C85EAX86mHha&oh=ab7d81d31ee3a382affa2547130dcfb9&oe=5F03EA25" alt="❌ ЖИР + САХАР И ДРУГИЕ ВАРИАЦИИ">
 									</div>
 									<div class="article-more__item-name" style="
 ">❌ ЖИР + САХАР И ДРУГИЕ ВАРИАЦИИ</div>
@@ -229,7 +181,7 @@
 								<a href="./posts/./ya-neodnokratno-stalkivayus--s-temx-chto-mnogie.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1216</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1219</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/98458367_288188905909491_779857171730809679_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=IyfYczqliToAX9CBN9u&oh=3c01ea805179ec191995a05c82499166&oe=5F0254D5" alt="Я неоднократно сталкиваюсь с тем, что многие">
 									</div>
@@ -239,7 +191,7 @@
 								<a href="./posts/./xx-tsena-interval-nogo-golodaniya.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1056</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1062</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101098622_101079681620253_7893285772348737471_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=Drc_ImQ_1A0AX_RMbqP&oh=5100743ab6707e49016f69e54fc1559e&oe=5F014F90" alt="🔥 ЦЕНА ИНТЕРВАЛЬНОГО ГОЛОДАНИЯ">
 									</div>
@@ -249,7 +201,7 @@
 								<a href="./posts/./toksichnye-vrediteli-xx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>945</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>962</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101421325_245625310000068_291160102237677734_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=-2n_LXDkne8AX_znFPh&oh=96ed41e82ae71a985cd0615fb17a5976&oe=5F0288DF" alt="ТОКСИЧНЫЕ ВРЕДИТЕЛИ 🦠">
 									</div>
@@ -259,9 +211,9 @@
 								<a href="./posts/./god-bez-zhirov.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>859</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>876</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101685128_756670644870301_8830249613421662623_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=M1etZbhD-4EAX-a8fBN&oh=7ea5398f263c8fbda7e67a84676bc05b&oe=5F02A6FF" alt="ГОД БЕЗ ЖИРОВ.">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101685128_756670644870301_8830249613421662623_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=DglTSaYg0hsAX-z_2cm&oh=91a98a77aca6b0958b22213c596569a2&oe=5F02A6FF" alt="ГОД БЕЗ ЖИРОВ.">
 									</div>
 									<div class="article-more__item-name" style="
 ">ГОД БЕЗ ЖИРОВ.</div>
@@ -269,7 +221,7 @@
 								<a href="./posts/./masla.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>855</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>858</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/99050802_1569651349875494_1068787266833651333_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=xBx9TgIpek4AX9yvYq_&oh=5ec684d848e47f7716d7c6d4bab522a9&oe=5F02B040" alt="МАСЛА…">
 									</div>
