--- a/stories.html
+++ b/stories.html
@@ -106,9 +106,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="rasskazhu-ka-ya-vam-o-pol-ze-zelenogo" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/102298134_1292392317818643_3835002096542030169_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=Xf4oruC103UAX8bKHlL&oh=dc78b6e1d634b422d41401c8fd761800&oe=5F03C3DB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РАССКАЖУ-КА Я ВАМ О ПОЛЬЗЕ ЗЕЛЕНОГО">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="o-chem-govorit-neperenosimost--fruktov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101398119_318429069147662_1373205108327136407_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=TVB58iOvklUAX_JUUSo&oh=55530a10d2d932ee724b4aac0af91c8f&oe=5F0203E2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="О ЧЕМ ГОВОРИТ НЕПЕРЕНОСИМОСТЬ ФРУКТОВ?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101398119_318429069147662_1373205108327136407_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=TVB58iOvklUAX_JUUSo&oh=55975f3986963157535c2da26b596580&oe=5F05F862" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="О ЧЕМ ГОВОРИТ НЕПЕРЕНОСИМОСТЬ ФРУКТОВ?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -128,7 +138,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="khochu-raskryt--vam-svoy-sekretxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101432207_846287522564790_1033379956016755776_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=YnL59FsCb5wAX9fB3rq&oh=57c5c0dc2335627dee891ebc9a8c392d&oe=5F0210F0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ХОЧУ РАСКРЫТЬ ВАМ СВОЙ СЕКРЕТ 🤫😎">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101432207_846287522564790_1033379956016755776_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=YnL59FsCb5wAX9fB3rq&oh=4ef2ca893c07ab1643bab4291364a144&oe=5F060570" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ХОЧУ РАСКРЫТЬ ВАМ СВОЙ СЕКРЕТ 🤫😎">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-tsena-interval-nogo-golodaniya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101098622_101079681620253_7893285772348737471_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=Drc_ImQ_1A0AX_RMbqP&oh=5100743ab6707e49016f69e54fc1559e&oe=5F014F90" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🔥 ЦЕНА ИНТЕРВАЛЬНОГО ГОЛОДАНИЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101098622_101079681620253_7893285772348737471_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=9iXWEbQGd_YAX_RdIeQ&oh=d61900e4268bc35d3f7dbbd97e7e29ac&oe=5F054410" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🔥 ЦЕНА ИНТЕРВАЛЬНОГО ГОЛОДАНИЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="interval-noe-golodanie" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101172768_116859330040796_4014620460128629771_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=qvGIOKE82-4AX93xczS&oh=9f0031834075c2426d1449213bf000f6&oe=5F01D84E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ИНТЕРВАЛЬНОЕ ГОЛОДАНИЕ.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101172768_116859330040796_4014620460128629771_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=qvGIOKE82-4AX93xczS&oh=26cbe353b8686dc3b89dacb56bc71685&oe=5F05CCCE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ИНТЕРВАЛЬНОЕ ГОЛОДАНИЕ.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-ananasxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101526673_186631159250094_3367879356632716893_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=chVqNnqu8DIAX-trMUX&oh=ec533c2afeb86cd8cdf78407b7f99606&oe=5F0440FA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🍍 АНАНАС 🍍">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101526673_186631159250094_3367879356632716893_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=lUDI1bUPaHwAX9Cs34S&oh=cbc8cc3c283237c05b4fbb12f9c38cea&oe=5F0440FA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🍍 АНАНАС 🍍">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="mango-yavlyaetsya-odnim" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/100967102_180178723339057_1503344869795588799_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=hYbI73s3NBgAX-1itq3&oh=ccf494ef67b46f25b0207f27b62451b9&oe=5F034460" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Манго является одним">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/100967102_180178723339057_1503344869795588799_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=hfpKM93bsmoAX87qtvb&oh=df3e8b003489785e1c812579319e07ed&oe=5F034460" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Манго является одним">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -208,7 +218,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="masla" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/99050802_1569651349875494_1068787266833651333_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=xBx9TgIpek4AX9yvYq_&oh=5ec684d848e47f7716d7c6d4bab522a9&oe=5F02B040" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МАСЛА…">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/99050802_1569651349875494_1068787266833651333_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=4LVRwv6Jr7kAX_NerDp&oh=8f1cc243a8258fdbaf68c9bb64d73693&oe=5F02B040" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МАСЛА…">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ya-neodnokratno-stalkivayus--s-temx-chto-mnogie" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/98458367_288188905909491_779857171730809679_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=IyfYczqliToAX9CBN9u&oh=3c01ea805179ec191995a05c82499166&oe=5F0254D5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Я неоднократно сталкиваюсь с тем, что многие">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/98458367_288188905909491_779857171730809679_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=IyfYczqliToAX9CBN9u&oh=2d065d6dd134467f3c273c1714f40137&oe=5F064955" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Я неоднократно сталкиваюсь с тем, что многие">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="pravda-ob-uksuse-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/98154003_2643776309236190_2293736837651192156_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=FX7jwMXN6NIAX9OSlw-&oh=b633a5c6fdb38e50b0b8021c9040ae07&oe=5F016DF6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПРАВДА ОБ УКСУСЕ 🍎🍏">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/98154003_2643776309236190_2293736837651192156_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=Rj5auYkLbY0AX9EZqgp&oh=7fa47b5848ff1221fcb20bcc7a3a0c7c&oe=5F056276" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПРАВДА ОБ УКСУСЕ 🍎🍏">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -238,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="lodochki-iz-krasnokachannoix-kapustyxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/97950059_1021519504910480_9202360642982216579_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=9Hup5L0QDCQAX_iz9-0&oh=dc2c8454aff403531ff5c7add6fa6858&oe=5F030718" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛОДОЧКИ ИЗ КРАСНОКАЧАННОЙ КАПУСТЫ 💜🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/97950059_1021519504910480_9202360642982216579_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=jmBg0sf3A24AX_vBG2-&oh=1f1eb0dde88166855eedf9dd3ca374b5&oe=5F030718" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛОДОЧКИ ИЗ КРАСНОКАЧАННОЙ КАПУСТЫ 💜🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ya-tak-chasto-pokazyvayu-eto-blyudo" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/97129589_161895015306925_2989129354723762743_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=M98X0s3uXHwAX89EBH6&oh=2afa366b7aff756557ef0c747d9aa725&oe=5F030C69" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Я так часто показываю это блюдо">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/97129589_161895015306925_2989129354723762743_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=pBfNNmjVA3gAX_FtnWw&oh=f4a91c45b883f9051ea97b977e5ea3d9&oe=5F030C69" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Я так часто показываю это блюдо">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,17 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zapechennaya-tsvetnaya-kapusta" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/96264436_1583796465122381_7468446220315787476_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=nyVxnJZ4ge8AX9mFXa4&oh=058bdba8f9cb70823a0dc00469d949a9&oe=5F038939" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗАПЕЧЕННАЯ ЦВЕТНАЯ КАПУСТА">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="sol--i-detoks-x" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/96684257_548397752777096_8021423434500462678_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=38hlinUdK_YAX--IL7T&oh=89fec6d9106be8403dc4f8c1cab9844c&oe=5F02DE9C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СОЛЬ И ДЕТОКС ❌">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/96264436_1583796465122381_7468446220315787476_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=RROKqmmLq28AX8w38Md&oh=54e27c978e2cc54a8d46338e68cbcb7d&oe=5F038939" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗАПЕЧЕННАЯ ЦВЕТНАЯ КАПУСТА">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
