--- a/error.html
+++ b/error.html
@@ -86,7 +86,7 @@
 							<a href="./posts/./zhizn--v-stile-detoks.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1446</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1449</span>
 								</div>
 								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101418878_2717064335205064_1737323169181004803_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=JfsFDkPNNXkAX9t-4fp&oh=becf24a088945fbc86ecfe6002aea519&oe=5F02FA6E" alt="ЖИЗНЬ В СТИЛЕ ДЕТОКС">
 							</div>
@@ -95,9 +95,9 @@
 							<a href="./posts/./interval-noe-golodanie.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1291</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1294</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101172768_116859330040796_4014620460128629771_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=qvGIOKE82-4AX93xczS&oh=9f0031834075c2426d1449213bf000f6&oe=5F01D84E" alt="ИНТЕРВАЛЬНОЕ ГОЛОДАНИЕ.">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101172768_116859330040796_4014620460128629771_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=qvGIOKE82-4AX93xczS&oh=26cbe353b8686dc3b89dacb56bc71685&oe=5F05CCCE" alt="ИНТЕРВАЛЬНОЕ ГОЛОДАНИЕ.">
 							</div>
 							<div class="article-more__item-name">ИНТЕРВАЛЬНОЕ ГОЛОДАНИЕ.</div>
 						</a>
@@ -110,21 +110,12 @@
 							</div>
 							<div class="article-more__item-name">❌ ЖИР + САХАР И ДРУГИЕ ВАРИАЦИИ</div>
 						</a>
-							<a href="./posts/./ya-neodnokratno-stalkivayus--s-temx-chto-mnogie.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1219</span>
-								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/98458367_288188905909491_779857171730809679_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=IyfYczqliToAX9CBN9u&oh=3c01ea805179ec191995a05c82499166&oe=5F0254D5" alt="Я неоднократно сталкиваюсь с тем, что многие">
-							</div>
-							<div class="article-more__item-name">Я неоднократно сталкиваюсь с тем, что многие</div>
-						</a>
 							<a href="./posts/./xx-tsena-interval-nogo-golodaniya.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1062</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1063</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101098622_101079681620253_7893285772348737471_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=Drc_ImQ_1A0AX_RMbqP&oh=5100743ab6707e49016f69e54fc1559e&oe=5F014F90" alt="🔥 ЦЕНА ИНТЕРВАЛЬНОГО ГОЛОДАНИЯ">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101098622_101079681620253_7893285772348737471_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=9iXWEbQGd_YAX_RdIeQ&oh=d61900e4268bc35d3f7dbbd97e7e29ac&oe=5F054410" alt="🔥 ЦЕНА ИНТЕРВАЛЬНОГО ГОЛОДАНИЯ">
 							</div>
 							<div class="article-more__item-name">🔥 ЦЕНА ИНТЕРВАЛЬНОГО ГОЛОДАНИЯ</div>
 						</a>
@@ -140,7 +131,7 @@
 							<a href="./posts/./god-bez-zhirov.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>876</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>883</span>
 								</div>
 								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101685128_756670644870301_8830249613421662623_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=DglTSaYg0hsAX-z_2cm&oh=91a98a77aca6b0958b22213c596569a2&oe=5F02A6FF" alt="ГОД БЕЗ ЖИРОВ.">
 							</div>
@@ -151,9 +142,18 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>858</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/99050802_1569651349875494_1068787266833651333_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=xBx9TgIpek4AX9yvYq_&oh=5ec684d848e47f7716d7c6d4bab522a9&oe=5F02B040" alt="МАСЛА…">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/99050802_1569651349875494_1068787266833651333_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=4LVRwv6Jr7kAX_NerDp&oh=8f1cc243a8258fdbaf68c9bb64d73693&oe=5F02B040" alt="МАСЛА…">
 							</div>
 							<div class="article-more__item-name">МАСЛА…</div>
+						</a>
+							<a href="./posts/./xx-ananasxxx.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>797</span>
+								</div>
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101526673_186631159250094_3367879356632716893_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=lUDI1bUPaHwAX9Cs34S&oh=cbc8cc3c283237c05b4fbb12f9c38cea&oe=5F0440FA" alt="🍍 АНАНАС 🍍">
+							</div>
+							<div class="article-more__item-name">🍍 АНАНАС 🍍</div>
 						</a>
 						</div>
 				</div>
